--- a/sandbox/src/App.css
+++ b/sandbox/src/App.css
@@ -1,3 +1,4 @@
+/*
 .App {
   text-align: center;
 }
@@ -35,4 +36,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+*/
+
+body {
+    /* theme light */
+    background-color: #f2f3f5;
+}
+
+.workspace-leaf-content .view-content {
+    padding: 20px 10px;
+    overflow: auto;
 }
