--- a/glass-web-components/src/components/my-component/tree/tree-node.css
+++ b/glass-web-components/src/components/my-component/tree/tree-node.css
@@ -1,18 +1,43 @@
 
+/*
 details > summary {
     list-style-type: '▶️';
-    /* list-style-type: ''; */
 }
 
 details[open] > summary {
     list-style-type: '🔽';
-    /* list-style-type: ''; */
 }
 
 details {
     border: 1px solid gray;
     border-radius: 0.2rem;
     padding: 0.5rem;
+}
+
+details[open] > summary {
+    margin-bottom: 0.5rem;
+}
+*/
+
+summary {
+    padding: 0;
+}
+
+details > summary {
+    list-style-type: none;
+}
+details > summary:hover {
+    background-color: lightblue;
+}
+details > summary::-webkit-details-marker {
+    display: none;
+}
+
+details {
+    border: 1px solid gray;
+    border-radius: 0.2rem;
+    padding: 0rem;
+    padding-left: 1.3rem;
 }
 
 details[open] > summary {
