--- a/glass-web-components/src/components/my-component/tree/tree.css
+++ b/glass-web-components/src/components/my-component/tree/tree.css
@@ -3,12 +3,10 @@ Some details element styling tips
 https://stackoverflow.com/questions/10813581/can-i-replace-the-expand-icon-of-the-details-element
 */
 
-
+/*
 summary {
     padding: 0;
 }
-
-
 
 details > summary {
     list-style-type: none;
@@ -20,10 +18,6 @@ details > summary::-webkit-details-marker {
     display: none;
 }
 
-
-
-
-
 details {
     border: 1px solid gray;
     border-radius: 0.2rem;
@@ -34,3 +28,4 @@ details {
 details[open] > summary {
     margin-bottom: 0.5rem;
 }
+*/
