More work on Manuscript Settings View

--- a/TestVault/.obsidian/plugins/litmojo-plugin/styles.css
+++ b/TestVault/.obsidian/plugins/litmojo-plugin/styles.css
@@ -55,5 +55,6 @@
 
 #items .is-active {
     background-color: var(--interactive-accent);
+	/* background-color: #D3C6FF; */
     color: var(--text-on-accent);
 }
